--- a/configuracion.html
+++ b/configuracion.html
@@ -2,44 +2,26 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Configuración - Sal del closet</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Configuración</title>
   <style>
     body {
       margin: 0;
       background: #b3e5fc;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       overflow: hidden;
+      user-select: none;
     }
-    #nubesContainer {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-    }
-    .nube {
-      position: absolute;
+
+    #contenedor {
       display: flex;
-      padding: 10px 15px;
-      border-radius: 30px;
-      filter: drop-shadow(0 1px 1px rgba(0,0,0,0.1));
-    }
-    .nube .circulo {
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
-      display: inline-block;
-      margin-right: -10px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .botonesConfig {
-      position: relative;
-      z-index: 10;
-      top: 40vh;
-      display: flex;
+      flex-direction: column;
+      align-items: center;
       justify-content: center;
-      gap: 60px;
+      height: 100vh;
+      gap: 40px;
     }
+
     .boton {
       background: #ff75a2;
       border: none;
@@ -53,92 +35,80 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      transition: background 0.3s ease;
     }
-    .boton:hover {
-      background: #e85b8d;
+
+    .filaBotones {
+      display: flex;
+      gap: 40px;
     }
-    #btnVolver {
-      position: absolute;
-      top: 20px;
+
+    #volver {
+      position: fixed;
+      bottom: 20px;
       left: 20px;
-      z-index: 10;
       background: #ff75a2;
-      color: white;
-      padding: 10px 16px;
-      border-radius: 10px;
       border: none;
+      padding: 10px 20px;
+      border-radius: 12px;
+      color: white;
       font-weight: bold;
-      font-size: 16px;
+      font-size: 18px;
       cursor: pointer;
-    }
-    #btnVolver:hover {
-      background: #e85b8d;
     }
   </style>
 </head>
 <body>
-  <!-- Fondo con nubes -->
-  <div id="nubesContainer"></div>
-
-  <!-- Botones -->
-  <div class="botonesConfig">
-    <button id="btnMusica" class="boton" title="Música">🎵</button>
-    <button id="btnVibracion" class="boton" title="Vibración">📳</button>
+  <div id="contenedor">
+    <div class="filaBotones">
+      <button id="musica" class="boton" title="Música">🎵</button>
+      <button id="vibracion" class="boton" title="Vibración">📳</button>
+    </div>
+    <button id="volver" onclick="window.location.href='menu_principal.html'">Volver</button>
   </div>
 
-  <!-- Volver al menú -->
-  <button id="btnVolver" onclick="window.location.href='index.html'">Volver</button>
-
-  <!-- Audio escondido -->
-  <audio id="audioPlayer" loop>
-    <source src="born_this_way.mp3" type="audio/mpeg" />
-    Tu navegador no admite audio.
-  </audio>
-
   <script>
-    // Crear nubes con banderas
-    const nubesData = [
-      {x: 60, y: 100, colores: ["#d60270","#9a4d90","#0038a8"]},
-      {x: 200, y: 60, colores: ["#ff218c","#ffd800","#21b1ff"]},
-      {x: 400, y: 120, colores: ["#5bcefa","#f5a9b8","#ffffff","#f5a9b8","#5bcefa"]},
-      {x: 600, y: 80, colores: ["#e40303","#ff8c00","#ffed00","#008026","#004dff","#750787"]},
-      {x: 800, y: 140, colores: ["#ff75a2","#ffffff","#8a00d4"]}
+    const canciones = [
+      "playlist/01_born_this_way.mp3",
+      "playlist/02_i_kissed_a_girl.mp3",
+      "playlist/03_i_wanna_be_your_girlfriend.mp3",
+      "playlist/04_estilazo.mp3",
+      "playlist/05_puchi.mp3",
+      "playlist/06_atrevete.mp3"
     ];
 
-    const nubesContainer = document.getElementById("nubesContainer");
+    let indiceActual = 0;
+    let reproduciendo = false;
+    let audio = new Audio();
+    let vibracionActiva = false;
 
-    nubesData.forEach(nube => {
-      const divNube = document.createElement("div");
-      divNube.classList.add("nube");
-      divNube.style.left = nube.x + "px";
-      divNube.style.top = nube.y + "px";
+    function reproducirCancion(index) {
+      if (!reproduciendo) return;
+      audio.src = canciones[index];
+      audio.play();
+      if (vibracionActiva && navigator.vibrate) navigator.vibrate(100);
+    }
 
-      nube.colores.forEach(color => {
-        const circulo = document.createElement("span");
-        circulo.classList.add("circulo");
-        circulo.style.backgroundColor = color;
-        divNube.appendChild(circulo);
-      });
-
-      nubesContainer.appendChild(divNube);
+    audio.addEventListener("ended", () => {
+      indiceActual = (indiceActual + 1) % canciones.length;
+      reproducirCancion(indiceActual);
     });
 
-    // Función del botón de música
-    const btnMusica = document.getElementById("btnMusica");
-    const audioPlayer = document.getElementById("audioPlayer");
-
-    let musicaActiva = false;
-
-    btnMusica.addEventListener("click", () => {
-      if (!musicaActiva) {
-        audioPlayer.play();
-        musicaActiva = true;
-        btnMusica.style.backgroundColor = "#a6e3a1"; // verde clarito para indicar ON
+    document.getElementById("musica").addEventListener("click", () => {
+      reproduciendo = !reproduciendo;
+      if (reproduciendo) {
+        indiceActual = 0;
+        reproducirCancion(indiceActual);
       } else {
-        audioPlayer.pause();
-        musicaActiva = false;
-        btnMusica.style.backgroundColor = "#ff75a2"; // rosita de nuevo
+        audio.pause();
+        audio.currentTime = 0;
       }
+      if (vibracionActiva && navigator.vibrate) navigator.vibrate(70);
+    });
+
+    document.getElementById("vibracion").addEventListener("click", () => {
+      vibracionActiva = !vibracionActiva;
+      if (vibracionActiva && navigator.vibrate) navigator.vibrate([30, 50, 30]);
     });
   </script>
 </body>
