--- a/configuracion.html
+++ b/configuracion.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Configuración</title>
+  <title>Configuración - Sal del Closet</title>
   <style>
     body {
       margin: 0;
@@ -13,16 +13,25 @@
       user-select: none;
     }
 
-    #contenedor {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+    canvas {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
       height: 100vh;
-      gap: 40px;
+      z-index: 0;
     }
 
-    .boton {
+    #contenedorBotones {
+      position: relative;
+      z-index: 10;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 40px;
+      margin-top: 35vh;
+    }
+
+    .botonToggle {
       background: #ff75a2;
       border: none;
       border-radius: 50%;
@@ -38,78 +47,140 @@
       transition: background 0.3s ease;
     }
 
-    .filaBotones {
-      display: flex;
-      gap: 40px;
+    .botonToggle:hover {
+      background: #e85b8d;
     }
 
-    #volver {
+    #btnVolver {
       position: fixed;
       bottom: 20px;
       left: 20px;
       background: #ff75a2;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 12px;
       color: white;
-      font-weight: bold;
+      font-weight: 600;
       font-size: 18px;
+      border: none;
+      border-radius: 10px;
+      padding: 8px 16px;
+      box-shadow: 0 2px 6px rgba(255,117,162,0.7);
       cursor: pointer;
+      z-index: 20;
+    }
+
+    /* Nubes de banderas */
+    .nube {
+      position: fixed;
+      border-radius: 30px;
+      filter: drop-shadow(0 1px 1px rgba(0,0,0,0.1));
+      z-index: 1;
+    }
+
+    .nube .circulo {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      display: inline-block;
+      margin-right: -10px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
   </style>
 </head>
 <body>
-  <div id="contenedor">
-    <div class="filaBotones">
-      <button id="musica" class="boton" title="Música">🎵</button>
-      <button id="vibracion" class="boton" title="Vibración">📳</button>
-    </div>
-    <button id="volver" onclick="window.location.href='menu_principal.html'">Volver</button>
-  </div>
 
-  <script>
-    const canciones = [
-      "playlist/01_born_this_way.mp3",
-      "playlist/02_i_kissed_a_girl.mp3",
-      "playlist/03_i_wanna_be_your_girlfriend.mp3",
-      "playlist/04_estilazo.mp3",
-      "playlist/05_puchi.mp3",
-      "playlist/06_atrevete.mp3"
-    ];
+<canvas></canvas>
 
-    let indiceActual = 0;
-    let reproduciendo = false;
-    let audio = new Audio();
-    let vibracionActiva = false;
+<!-- Nubes -->
+<div id="nubesContainer"></div>
 
-    function reproducirCancion(index) {
-      if (!reproduciendo) return;
-      audio.src = canciones[index];
+<!-- Botones -->
+<div id="contenedorBotones">
+  <button id="btnMusica" class="botonToggle" title="Música">🎵</button>
+  <button id="btnVibracion" class="botonToggle" title="Vibración">📳</button>
+</div>
+
+<button id="btnVolver" onclick="window.location.href='menu_principal.html'">Volver</button>
+
+<audio id="audioPlayer" preload="auto"></audio>
+
+<script>
+  // 🎵 Playlist
+  const canciones = [
+    "born_this_way.mp3",
+    "i_kissed_a_girl.mp3",
+    "i_wanna_be_your_girlfriend.mp3",
+    "estilazo.mp3",
+    "puchi.mp3",
+    "atrevete_te_te.mp3"
+  ];
+
+  let actual = 0;
+  let reproduciendo = false;
+  let vibracionActiva = false;
+
+  const audio = document.getElementById("audioPlayer");
+  audio.src = canciones[actual];
+  audio.volume = 0.8;
+
+  document.getElementById("btnMusica").addEventListener("click", () => {
+    vibrar();
+
+    if (!reproduciendo) {
       audio.play();
-      if (vibracionActiva && navigator.vibrate) navigator.vibrate(100);
+      reproduciendo = true;
+    } else {
+      audio.pause();
+      reproduciendo = false;
     }
+  });
 
-    audio.addEventListener("ended", () => {
-      indiceActual = (indiceActual + 1) % canciones.length;
-      reproducirCancion(indiceActual);
+  // 🎶 Siguiente canción al terminar
+  audio.addEventListener("ended", () => {
+    actual = (actual + 1) % canciones.length;
+    audio.src = canciones[actual];
+    audio.play();
+  });
+
+  // 📳 Vibración toggle
+  document.getElementById("btnVibracion").addEventListener("click", () => {
+    vibracionActiva = !vibracionActiva;
+    vibrar();
+  });
+
+  function vibrar() {
+    if (vibracionActiva && navigator.vibrate) {
+      navigator.vibrate(100);
+    }
+  }
+
+  // 🌈 Nubes
+  const nubesData = [
+    {x: 80, y: 80, colores: ["#d60270","#9a4d90","#0038a8"]}, // Bi
+    {x: 200, y: 130, colores: ["#ff218c","#ffd800","#21b1ff"]}, // Pan
+    {x: 320, y: 90, colores: ["#5bcefa","#f5a9b8","#ffffff","#f5a9b8","#5bcefa"]}, // Trans
+    {x: 500, y: 130, colores: ["#e40303","#ff8c00","#ffed00","#008026","#004dff","#750787"]}, // LGBT
+    {x: 650, y: 80, colores: ["#d60270","#f9a8d4","#ffffff","#61c0bf","#0038a8"]}, // Gay
+    {x: 800, y: 120, colores: ["#ff75a2","#ffffff","#8a00d4"]} // Lesbian
+  ];
+
+  const nubesContainer = document.getElementById("nubesContainer");
+
+  nubesData.forEach(nube => {
+    const divNube = document.createElement("div");
+    divNube.classList.add("nube");
+    divNube.style.left = nube.x + "px";
+    divNube.style.top = nube.y + "px";
+    divNube.style.padding = "8px 12px";
+
+    nube.colores.forEach(color => {
+      const circulo = document.createElement("span");
+      circulo.classList.add("circulo");
+      circulo.style.backgroundColor = color;
+      divNube.appendChild(circulo);
     });
 
-    document.getElementById("musica").addEventListener("click", () => {
-      reproduciendo = !reproduciendo;
-      if (reproduciendo) {
-        indiceActual = 0;
-        reproducirCancion(indiceActual);
-      } else {
-        audio.pause();
-        audio.currentTime = 0;
-      }
-      if (vibracionActiva && navigator.vibrate) navigator.vibrate(70);
-    });
+    nubesContainer.appendChild(divNube);
+  });
+</script>
 
-    document.getElementById("vibracion").addEventListener("click", () => {
-      vibracionActiva = !vibracionActiva;
-      if (vibracionActiva && navigator.vibrate) navigator.vibrate([30, 50, 30]);
-    });
-  </script>
 </body>
 </html>
