--- a/configuracion.html
+++ b/configuracion.html
@@ -83,6 +83,7 @@
       margin-right: -10px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
+    <audio id="audioPlayer" style="display:none;"></audio>
   </style>
 </head>
 <body>
@@ -110,7 +111,7 @@
     "i_wanna_be_your_girlfriend.mp3",
     "estilazo.mp3",
     "puchi.mp3",
-    "atrevete_te_te.mp3"
+    "atrevete.mp3"
   ];
 
   let actual = 0;
