--- a/configuracion.html
+++ b/configuracion.html
@@ -88,6 +88,8 @@
 
   <!-- Botón Volver -->
   <button id="btnVolver">← Volver</button>
+  document.getElementById('btnVolver')
+  .addEventListener('click', () => window.location.href = 'index.html');
 
   <!-- Nubes animadas -->
   <div id="nubesContainer"></div>
