--- a/logros.html
+++ b/logros.html
@@ -1,233 +1,121 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Sal del Closet - Logros 🏆</title>
-<style>
-  body {
-    margin: 0;
-    background: linear-gradient(135deg, #a0d8f7 0%, #f7a0c4 100%);
-    font-family: Arial, sans-serif;
-    color: #222;
-    overflow-y: auto;
-    height: 100vh;
-    position: relative;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Logros 🏆</title>
+  <style>
+    body {
+      margin: 0;
+      background: #b3e5fc;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      user-select: none;
+      overflow-y: auto;
+    }
 
-  <button id="btnVolver" style="
-  position: fixed;
-  top: 15px;
-  left: 15px;
-  padding: 8px 12px;
-  background: #ff75a2;
-  border: none;
-  border-radius: 8px;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-  box-shadow: 0 2px 6px rgba(255,117,162,0.7);
-  z-index: 1000;
-">← Volver</button>
+    h1 {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 48px;
+      color: #ff75a2;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    }
 
-<script>
-  document.getElementById('btnVolver').addEventListener('click', () => {
-    window.location.href = 'index.html'; // O la ruta de tu menú principal
-  });
-</script>
-  #nubesContainer {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    overflow: visible;
-    z-index: 0;
-  }
+    .linea {
+      height: 3px;
+      background-color: #ff75a2;
+      margin: 20px auto;
+      width: 80%;
+      border-radius: 2px;
+    }
 
-  .nube {
-    position: absolute;
-    width: 140px;
-    height: 90px;
-    border-radius: 70px / 50px;
-    box-shadow: 0 0 15px rgba(255 255 255 / 0.6);
-    overflow: hidden;
-    filter: drop-shadow(0 2px 3px rgba(0,0,0,0.15));
-    animation: flotar 6s ease-in-out infinite;
-    display: flex;
-    flex-direction: column;
-  }
+    .logro {
+      background: white;
+      margin: 20px auto;
+      padding: 15px 25px;
+      border-radius: 10px;
+      width: 80%;
+      max-width: 700px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      font-size: 20px;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
 
-  .nube span {
-    display: block;
-    flex-grow: 1;
-    width: 100%;
-  }
+    #btnVolver {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      background: #ff75a2;
+      border: none;
+      border-radius: 12px;
+      padding: 10px 16px;
+      color: white;
+      font-size: 18px;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      transition: background 0.3s ease;
+      z-index: 10;
+    }
 
-  @keyframes flotar {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-15px); }
-  }
+    #btnVolver:hover {
+      background: #e85b8d;
+    }
 
-  main {
-    position: relative;
-    z-index: 1;
-    max-width: 600px;
-    margin: 80px auto 40px;
-    background: rgba(255 255 255 / 0.85);
-    padding: 20px 30px;
-    border-radius: 15px;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-  }
-
-  h1 {
-    text-align: center;
-    font-size: 2.8rem;
-    margin-bottom: 5px;
-    font-weight: 700;
-  }
-
-  .linea {
-    width: 100%;
-    height: 3px;
-    background: linear-gradient(90deg, #ff3c78, #ffe600, #00d2ff, #ff3c78);
-    margin-bottom: 25px;
-    border-radius: 4px;
-  }
-
-  .logro {
-    margin-bottom: 18px;
-    font-size: 1.2rem;
-    font-weight: 600;
-    line-height: 1.3;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .logro .titulo {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-
-  .logro .titulo .emoji {
-    font-size: 1.5rem;
-  }
-
-  .logro .descripcion {
-    font-weight: 400;
-    font-size: 0.9rem;
-    margin-left: 1.8rem;
-    color: #555;
-  }
-</style>
+    .nube {
+      position: fixed;
+      border-radius: 50%;
+      filter: drop-shadow(0 2px 4px rgba(0,0,0,0.1));
+      z-index: 1;
+    }
+  </style>
 </head>
 <body>
 
 <div id="nubesContainer"></div>
 
-<main>
-  <h1>Logros 🏆</h1>
-  <div class="linea"></div>
+<button id="btnVolver" onclick="window.location.href='index.html'">⬅️ Volver</button>
 
-  <div class="logro">
-    <div class="titulo"><span class="emoji">🥇</span>Salir del Closet</div>
-    <div class="descripcion">Se desbloquea al salir de un closet en el juego.</div>
-  </div>
+<h1>Logros 🏆</h1>
+<div class="linea"></div>
 
-  <div class="logro">
-    <div class="titulo"><span class="emoji">🥈</span>Vence a Tu familia</div>
-    <div class="descripcion">Supera al enemigo “familia” en un nivel especial.</div>
-  </div>
-
-  <div class="logro">
-    <div class="titulo"><span class="emoji">🥉</span>Superar 10 comentarios homófobos</div>
-    <div class="descripcion">Esquiva 10 enemigos con comentarios homófobos.</div>
-  </div>
-
-  <div class="logro">
-    <div class="titulo">No vuelvo a ser closeterx</div>
-    <div class="descripcion">Pasa 3 niveles sin entrar a un closet.</div>
-  </div>
-
-  <div class="logro">
-    <div class="titulo">Estoy para ti seas lo que seas</div>
-    <div class="descripcion">Mantener amistad incondicional con tu amigx.</div>
-  </div>
-
-  <div class="logro">
-    <div class="titulo">No es solo un juego, es mi vida</div>
-    <div class="descripcion">Completa todos los niveles del juego.</div>
-  </div>
-
-  <div class="logro">
-    <div class="titulo">Viste tus colores con orgullo</div>
-    <div class="descripcion">Personaliza tu personaje con al menos 3 banderas.</div>
-  </div>
-
-  <div class="logro">
-    <div class="titulo">Rompiendo el closet</div>
-    <div class="descripcion">Entra y sal de un closet 5 veces sin quedarte atrapadx.</div>
-  </div>
-
-  <div class="logro">
-    <div class="titulo">Siempre auténticx</div>
-    <div class="descripcion">Juega 10 niveles consecutivos sin usar ayudas.</div>
-  </div>
-</main>
+<div class="logro">🥇 Salir del Closet ✅</div>
+<div class="logro">🥈 Vence a tu familia</div>
+<div class="logro">🥉 Superar 10 comentarios homófobos</div>
+<div class="logro">Estoy para ti seas lo que seas</div>
+<div class="logro">No vuelvo a ser closeterx</div>
+<div class="logro">Besar a tu crush del mismo sexo</div>
+<div class="logro">Decírselo a unx amigx</div>
+<div class="logro">Descubrir tu bandera</div>
+<div class="logro">Sobrevivir el colegio</div>
+<div class="logro">Salir por primera vez a una marcha</div>
+<div class="logro">Ver un personaje LGBT en la tele y emocionarte</div>
 
 <script>
-  const banderas = [
-    { nombre: "Bisexual", colores: ["#D60270", "#9B4F96", "#0038A8"] },
-    { nombre: "Pansexual", colores: ["#FF218C", "#FFD800", "#21B1FF"] },
-    { nombre: "Trans", colores: ["#5BCEFA", "#F5A9B8", "#FFFFFF", "#F5A9B8", "#5BCEFA"] },
-    { nombre: "LGBT", colores: ["#E40303", "#FF8C00", "#FFED00", "#008026", "#004DFF", "#750787"] },
-    { nombre: "Gay", colores: ["#D60270", "#F9A8D4", "#FFFFFF", "#61C0BF", "#0038A8"] },
-    { nombre: "Lesbiana", colores: ["#FF75A2", "#FFFFFF", "#8A00D4"] },
-    { nombre: "Asexual", colores: ["#000000", "#A3A3A3", "#FFFFFF", "#800080"] },
-    { nombre: "Demisexual", colores: ["#000000", "#FFFFFF", "#A3A3A3", "#800080"] },
-    { nombre: "Aromantic", colores: ["#3DA544", "#A3D9A5", "#FFFFFF", "#A3D9A5", "#3DA544"] },
-    { nombre: "Aroace", colores: ["#000000", "#FFFFFF", "#C3E9E8"] },
-    { nombre: "Trans chica", colores: ["#5BCEFA", "#F5A9B8", "#FFFFFF", "#F5A9B8", "#5BCEFA"] },
-    { nombre: "Trans chico", colores: ["#5BCEFA", "#F5A9B8", "#FFFFFF", "#F5A9B8", "#5BCEFA"] },
-    { nombre: "Genero fluido", colores: ["#FF75A2", "#FFD800", "#663399", "#000000", "#21B1FF"] },
-    { nombre: "No binario", colores: ["#FFF430", "#FFFFFF", "#9C59D1", "#000000"] }
+  const nubesData = [
+    {x: 60, y: 80, colores: ["#d60270","#9a4d90","#0038a8"]}, // Bi
+    {x: 250, y: 140, colores: ["#ff218c","#ffd800","#21b1ff"]}, // Pan
+    {x: 500, y: 100, colores: ["#5bcefa","#f5a9b8","#ffffff","#f5a9b8","#5bcefa"]}, // Trans
+    {x: 700, y: 160, colores: ["#e40303","#ff8c00","#ffed00","#008026","#004dff","#750787"]}, // LGBT
+    {x: 900, y: 60, colores: ["#d60270","#f9a8d4","#ffffff","#61c0bf","#0038a8"]}, // Gay
+    {x: 1100, y: 100, colores: ["#ff75a2","#ffffff","#8a00d4"]} // Lésbica
   ];
 
-  const container = document.getElementById("nubesContainer");
-
-  // Creamos solo 4 nubes al azar y bien distribuidas
-  function crearNube(bandera, posicionX, posicionY, delay) {
-    const nube = document.createElement("div");
-    nube.classList.add("nube");
-    nube.style.setProperty('--num-franjas', bandera.colores.length);
-
-    bandera.colores.forEach(color => {
-      const franja = document.createElement("span");
-      franja.style.backgroundColor = color;
-      nube.appendChild(franja);
+  const nubesContainer = document.getElementById("nubesContainer");
+  nubesData.forEach(nube => {
+    nube.colores.forEach((color, i) => {
+      const circulo = document.createElement("div");
+      circulo.classList.add("nube");
+      circulo.style.left = (nube.x + i * 22) + "px";
+      circulo.style.top = nube.y + "px";
+      circulo.style.width = "40px";
+      circulo.style.height = "40px";
+      circulo.style.backgroundColor = color;
+      nubesContainer.appendChild(circulo);
     });
-
-    nube.style.left = posicionX + "px";
-    nube.style.top = posicionY + "px";
-    nube.style.animationDelay = delay + "s";
-
-    container.appendChild(nube);
-  }
-
-  // Posiciones fijas para 4 nubes (ajústalas si quieres)
-  const posiciones = [
-    { x: 100, y: 70, delay: 0 },
-    { x: 350, y: 130, delay: 2 },
-    { x: 600, y: 80, delay: 4 },
-    { x: 850, y: 120, delay: 1 }
-  ];
-
-  for(let i=0; i<4; i++) {
-    const bandera = banderas[i % banderas.length];
-    const pos = posiciones[i];
-    crearNube(bandera, pos.x, pos.y, pos.delay);
-  }
+  });
 </script>
-
 </body>
 </html>
