--- a/configuracion.html
+++ b/configuracion.html
@@ -9,166 +9,130 @@
       margin: 0;
       background: #b3e5fc;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      overflow: hidden;
       user-select: none;
+      overflow: hidden;
     }
-    /* Botón Volver */
-    #btnVolver {
-      position: fixed;
-      top: 15px;
-      left: 15px;
+
+    h1 {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 42px;
+      color: #ff75a2;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    }
+
+    #botones {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      margin-top: 40px;
+    }
+
+    .boton {
       background: #ff75a2;
       border: none;
       border-radius: 12px;
-      padding: 8px 14px;
+      padding: 14px 22px;
+      font-size: 20px;
       color: white;
-      font-weight: 600;
-      font-size: 16px;
+      font-weight: bold;
       cursor: pointer;
-      box-shadow: 0 2px 6px rgba(255,117,162,0.7);
-      z-index: 100;
-    }
-    #btnVolver:hover {
-      background: #e85b8d;
-    }
-    /* Tus nubes animadas */
-    #nubesContainer {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      pointer-events: none;
-      z-index: 0;
-      overflow: hidden;
-    }
-    .nube {
-      position: absolute;
-      width: 140px; height: 90px;
-      border-radius: 70px/50px;
-      overflow: hidden;
-      filter: drop-shadow(0 2px 3px rgba(0,0,0,0.15));
-      animation: flotar 6s ease-in-out infinite;
-      display: flex; flex-direction: column;
-    }
-    .nube span {
-      flex-grow: 1; width: 100%;
-    }
-    @keyframes flotar {
-      0%,100% { transform: translateY(0); }
-      50%    { transform: translateY(-15px); }
-    }
-    /* Botones centrales */
-    .botonesConfig {
-      position: relative;
-      z-index: 10;
-      display: flex;
-      justify-content: center;
-      gap: 60px;
-      margin-top: 40vh;
-    }
-    .botonToggle {
-      background: #ff75a2;
-      border: none;
-      border-radius: 50%;
-      width: 100px; height: 100px;
-      font-size: 36px;
-      color: white;
-      cursor: pointer;
-      box-shadow: 0 4px 10px rgba(255,117,162,0.7);
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
       transition: background 0.3s ease;
     }
-    .botonToggle:hover {
+
+    .boton:hover {
       background: #e85b8d;
+    }
+
+    #notificacion {
+      margin-top: 20px;
+      font-size: 16px;
+      color: #555;
+      text-align: center;
+      font-weight: 600;
+    }
+
+    .nube {
+      position: fixed;
+      border-radius: 50%;
+      filter: drop-shadow(0 2px 4px rgba(0,0,0,0.1));
+      z-index: 1;
     }
   </style>
 </head>
 <body>
+<div id="nubesContainer"></div>
 
-  <!-- Botón Volver -->
-  <button id="btnVolver">← Volver</button>
+<h1>Configuración ⚙️</h1>
+<div id="botones">
+  <button class="boton" id="btnMusica">🔊 Activar música</button>
+  <button class="boton" id="btnVibracion">📳 Vibración</button>
+  <button class="boton" onclick="window.location.href='index.html'">⬅️ Volver</button>
+  <div id="notificacion"></div>
+</div>
 
-  document.getElementById('btnVolver')
-  .addEventListener('click', () => window.location.href = 'index.html');
+<audio id="audioPlayer" loop>
+  <source src="born_this_way.mp3" type="audio/mpeg" />
+  Tu navegador no soporta audio HTML5.
+</audio>
 
-  <!-- Nubes animadas -->
-  <div id="nubesContainer"></div>
+<script>
+  const audio = document.getElementById("audioPlayer");
+  const btnMusica = document.getElementById("btnMusica");
+  const btnVibracion = document.getElementById("btnVibracion");
+  const notificacion = document.getElementById("notificacion");
 
-  <!-- Botones Música y Vibración -->
-  <div class="botonesConfig">
-    <button id="btnMusica" class="botonToggle" title="Música">🎵</button>
-    <button id="btnVibracion" class="botonToggle" title="Vibración">📳</button>
-  </div>
+  let reproduciendo = false;
+  let vibracionActiva = false;
 
-  <!-- Audio oculto -->
-  <audio id="audioPlayer" preload="auto"></audio>
-
-  <script>
-    // Volver al menú principal
-    document.getElementById('btnVolver')
-      .addEventListener('click', () => window.location.href = 'index.html');
-
-    // Playlist y Vibración (igual que antes)
-    const canciones = [
-      "born_this_way.mp3",
-      "i_kissed_a_girl.mp3",
-      "i_wanna_be_your_girlfriend.mp3",
-      "estilazo.mp3",
-      "puchi.mp3",
-      "atrevete_te_te.mp3"
-    ];
-    let indice = 0, sonando = false, vibra = false;
-    const audio = document.getElementById("audioPlayer");
-    audio.src = canciones[indice];
-    audio.volume = 0.8;
-
-    // Botón Música
-    document.getElementById("btnMusica").addEventListener("click", () => {
-      if (!sonando) {
-        audio.play(); sonando = true;
-      } else {
-        audio.pause(); sonando = false;
-        audio.currentTime = 0;
-      }
-      if (vibra && navigator.vibrate) navigator.vibrate(70);
-    });
-
-    // Siguiente canción
-    audio.addEventListener("ended", () => {
-      indice = (indice + 1) % canciones.length;
-      audio.src = canciones[indice];
+  btnMusica.addEventListener("click", () => {
+    if (!reproduciendo) {
       audio.play();
-    });
+      notificacion.textContent = "‼️La música se activó sonará en repeat hasta que se desactive ‼️";
+    } else {
+      audio.pause();
+      notificacion.textContent = "";
+    }
+    reproduciendo = !reproduciendo;
+    vibrar();
+  });
 
-    // Botón Vibración
-    document.getElementById("btnVibracion").addEventListener("click", () => {
-      vibra = !vibra;
-      if (vibra && navigator.vibrate) navigator.vibrate([50,30,50]);
-    });
+  btnVibracion.addEventListener("click", () => {
+    vibracionActiva = !vibracionActiva;
+    vibrar();
+  });
 
-    // Generar nubes
-    const banderas = [
-      {x:100,y:70,colores:["#D60270","#9B4F96","#0038A8"]},
-      {x:350,y:130,colores:["#FF218C","#FFD800","#21B1FF"]},
-      {x:600,y:80,colores:["#5BCEFA","#F5A9B8","#FFFFFF","#F5A9B8","#5BCEFA"]},
-      {x:850,y:120,colores:["#FF75A2","#FFFFFF","#8A00D4"]}
-    ];
-    const cont = document.getElementById("nubesContainer");
-    banderas.forEach((b,i) => {
-      const n = document.createElement("div");
-      n.classList.add("nube");
-      n.style.left = b.x + "px";
-      n.style.top = b.y + "px";
-      n.style.setProperty('--num-franjas', b.colores.length);
-      b.colores.forEach(c => {
-        const f = document.createElement("span");
-        f.style.backgroundColor = c;
-        n.appendChild(f);
-      });
-      n.style.animationDelay = (i*1.5) + "s";
-      cont.appendChild(n);
+  function vibrar() {
+    if (vibracionActiva && navigator.vibrate) {
+      navigator.vibrate(100);
+    }
+  }
+
+  // 🌈 Nubes LGBT
+  const nubesData = [
+    {x: 60, y: 80, colores: ["#d60270","#9a4d90","#0038a8"]}, // Bi
+    {x: 250, y: 140, colores: ["#ff218c","#ffd800","#21b1ff"]}, // Pan
+    {x: 500, y: 100, colores: ["#5bcefa","#f5a9b8","#ffffff","#f5a9b8","#5bcefa"]}, // Trans
+    {x: 700, y: 160, colores: ["#e40303","#ff8c00","#ffed00","#008026","#004dff","#750787"]}, // LGBT
+    {x: 900, y: 60, colores: ["#d60270","#f9a8d4","#ffffff","#61c0bf","#0038a8"]}, // Gay
+    {x: 1100, y: 100, colores: ["#ff75a2","#ffffff","#8a00d4"]} // Lésbica
+  ];
+
+  const nubesContainer = document.getElementById("nubesContainer");
+  nubesData.forEach(nube => {
+    nube.colores.forEach((color, i) => {
+      const circulo = document.createElement("div");
+      circulo.classList.add("nube");
+      circulo.style.left = (nube.x + i * 22) + "px";
+      circulo.style.top = nube.y + "px";
+      circulo.style.width = "40px";
+      circulo.style.height = "40px";
+      circulo.style.backgroundColor = color;
+      nubesContainer.appendChild(circulo);
     });
-  </script>
+  });
+</script>
 </body>
 </html>
